--- a/mod.conf
+++ b/mod.conf
@@ -1,1 +1,3 @@
 name = travelnet
+optional_depends = mesecons
+description = Network of teleporter-boxes that allow easy travelling to other boxes on the same network.
