--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = travelnet
-optional_depends = mesecons
+optional_depends = default, mesecons
 description = Network of teleporter-boxes that allow easy travelling to other boxes on the same network.
